examples/codegen/stdlib-tests/string.an
import Std.String.bytes, chars, substr, string_of, join, split, reverse
import Std.Stream.iter, intersperse, stream_fn, Emit, emit
import Std.String.starts_with, ends_with, contains, trim, trim_start, trim_end

main () =
    // bytes & chars:
    iter (bytes "AB") println
    iter (chars "AB") println

    // substr:
    println (substr "abcdef" 1 4)
    println (substr "abc" 0 99) // prints an empty string, should update to fail

    // string_of:
    println (string_of (chars "hi"))

    // reverse:
    println (reverse "hello")
    fresh = string_of (chars "world")
    println (reverse fresh)

    // split:
    split "foo bar  baz " ' ' |> iter println
    println "end of split"

    // join over an interspersed stream → single String "a, b, c"
    println (intersperse abc_stream ", " |> join)
    test_predicates ()

abc_stream {Emit String}: Unit =
    emit "a"
    emit "b"
    emit "c"

test_predicates () =
    println (starts_with (ref "hello world") (ref "hello"))
    println (starts_with (ref "hello world") (ref "world"))
    println (starts_with (ref "hi") (ref "hello"))
    println (ends_with (ref "hello world") (ref "world"))
    println (ends_with (ref "hello world") (ref "hello"))
    println (contains (ref "hello world") (ref "lo wo"))
    println (contains (ref "hello world") (ref "xyz"))
    println (contains (ref "abc") (ref ""))
    // Brackets so trailing whitespace is visible (and matches goldentest).
    println ("[" ++ trim "  hi  " ++ "]")
    println ("[" ++ trim_start "  hi  " ++ "]")
    println ("[" ++ trim_end "  hi  " ++ "]")
    println ("[" ++ trim "   " ++ "]")
    println ("[" ++ trim "no-trim" ++ "]")

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/stdlib-tests/string.an:27:26
// 26 |     // join over an interspersed stream → single String "a, b, c"
//    |     // error: Argument 1 has type fn {Emit String} -> Unit pure but fn Unit => Unit can (Emit String) was expected
// 27 |     println (intersperse abc_stream ", " |> join)
//    |                          ^^^^^^^^^^
// 28 |     test_predicates ()
// 
// examples/codegen/stdlib-tests/string.an:30:13
//    | // error: This is an effect and cannot be used as an ordinary type
// 30 | abc_stream {Emit String}: Unit =
//    |             ^^^^^^^^^^^
// 31 |     emit "a"
// 
// examples/codegen/stdlib-tests/string.an:31:5
// 30 | abc_stream {Emit String}: Unit =
// 31 |     emit "a"	// error: This can perform (Emit _) but no effects are allowed here
//    |     ^^^^
// 32 |     emit "b"
// 
// examples/codegen/stdlib-tests/string.an:32:5
// 31 |     emit "a"
// 32 |     emit "b"	// error: This can perform (Emit _) but no effects are allowed here
//    |     ^^^^
// 33 |     emit "c"
// 
// examples/codegen/stdlib-tests/string.an:33:5
// 32 |     emit "b"
// 33 |     emit "c"	// error: This can perform (Emit _) but no effects are allowed here
//    |     ^^^^
// 
// Found 5 errors and 0 warnings

